...
      "application_info": "ApplicationInfo",
      "blog": "Blog",
      "colors": "Colors",
      "components": "Components",
      "data_from_be_screen_example": "Data from BE",
      "details": "Details",
      "examples_stack": "Examples",
      "examples": "Examples",
      "forgot_password": "Forgot password",
      "home_stack": "Home",
      "home": "Home",
      "main_tab": "MainTab",
      "not_found": "Not Found",
...
    "go_to_home_stack_details": "Go to HomeStackDetails",
    "go_to_screen_test_form": "Go to test form",
    "go_to_screen_with_BEdata": "Go to screen with data from BE",
    "go_to_settings": "Go to Settings",
    "go_to_typography": "Go to Typography",
    "go_to_style_benchmark": "Go to Style Benchmark",
    "go_to_user_session": "Go to user session",
    "header": "This is Example screen"
  },
  "forgot_password_screen": {
    "back_to_login": "Back to login",
    "forgot_password": "Forgot password?",
    "no_worries": "No worries, we’ll send you reset instructions.",
...
  "reset_password_screen": {
    "reset_password": "Reset password",
    "set_new_password": "Set new password",
    "welcome_back": "Welcome back! Please enter your details."
  },
  "settings_screen": {
    "copy_push_token": "Copy push token",
    "current_theme": "Current theme: {{theme}}",
    "selected": " - selected",
    "sign_out": "Sign out!",
    "list_heading": "Settings",
    "color_scheme_picker_label": "Pick app color scheme",
    "language_picker_label": "Pick app language"
...
