...
  const goToCityListScreen_EXAMPLE = useCallback(() => push('/example/data-from-be'), [push])

  return (
    <ScrollView p={4} gap={4}>
      <Display.SmBold>App logic</Display.SmBold>
      <Button onPress={goToApplicationInfo}>{t('examples_screen.go_to_application_info')}</Button>
      <Button onPress={goToPushNotificationsHelpers}>Go to push notifications helpers</Button>
      <Button onPress={goToUserSession}>{t('examples_screen.go_to_user_session')}</Button>

      <Display.SmBold>UI Examples</Display.SmBold>
      <Button onPress={goToColors}>{t('examples_screen.go_to_colors')}</Button>
      <Button onPress={goToComponents}>{t('examples_screen.go_to_components')}</Button>
      <Button onPress={goToTypography}>{t('examples_screen.go_to_typography')}</Button>
...
