...
  const navigateWithNotification = useCallback(
    (notification: Notifications.Notification) => {
      const { title, body } = notification?.request?.content ?? {}
      alert(title ?? 'Notification', body ?? 'Navigate somewhere', [
        { text: 'Cancel', onPress: () => setInAppNotification(undefined), style: 'cancel' },
        {
          text: 'Ok',
          onPress: () => {
            // Elvis chains prevent crashes in undiscslosed edge cases
            const deeplinkPath = notification?.request?.content?.data?.deeplink as
              | string
              | undefined
            handleDeeplink(deeplinkPath)
...
