...
          <ColorSchemeSettings />
          <LanguageSettings />
        </Box>

        <Box flexGrow={1} />

        <Button.SecondaryColor mt={8} size="lg" onPress={signOut} testID="settings:logout">
          {t('settings_screen.sign_out')}
        </Button.SecondaryColor>
        <Spacer y={4} />
        <Version onPress={noop} />
        <Spacer y={8} />
      </Box>
...
