...
        <LanguagePicker isWeb={isWeb} pickerPlacement="bottomRight" />
      </Box>
      <Center alignSelf="center" maxWidth={360} w="full">
        <Spacer y={isWeb ? 4 : 8} />
        <CompanyLogo height={50} type="binar" />
        <Spacer y={8} />
        <Display.SmSemibold testID="sign_in:title">
          {t('sign_in_screen.welcome_back')}
        </Display.SmSemibold>
        <Spacer y={3} />
        <Text.MdRegular
          testID="sign_in:sub_title"
          color="text.tertiary"
...
