...
    <ScrollView flexGrow={1} p={4}>
      <HelperSection header="User data">
        <Text.MdMedium>Is fetching user data:</Text.MdMedium>
        <HelperRenderJson>{isPending || isRefetching}</HelperRenderJson>
        <Text.MdMedium>User data:</Text.MdMedium>
        <HelperRenderJson>{data}</HelperRenderJson>
        <Button loading={isRefetching} onPress={fetchUser} title="Refetch user" />
      </HelperSection>

      <HelperSection header="Refresh token">
        <Text.MdMedium>Is refreshing token:</Text.MdMedium>
        <HelperRenderJson>{isRefreshing}</HelperRenderJson>
        <Text.MdMedium>Refresh token:</Text.MdMedium>
        <HelperRenderJson>
          {{ ...token, expDate: new Date(token?.tokenExpires || 0).toLocaleString() }}
        </HelperRenderJson>
        <Button onPress={fetchToken} title="Try to get new token if needed" />
      </HelperSection>
    </ScrollView>
  )
}

