appId: ${APP_ID}
tags:
  - example
---
- assertVisible: 'Go to user session'
- tapOn: 'Go to user session'
- assertVisible: 'Refetch user'
- tapOn: 'Refetch user'
- scrollUntilVisible:
    element:
      text: 'Try to get new token if needed'
    direction: DOWN
    timeout: 12500
    speed: 60
    visibilityPercentage: 100
- tapOn: 'Try to get new token if needed'
- assertVisible: 'Examples'
- tapOn: 'Examples'
- assertVisible: ' Settings'
- tapOn: ' Settings'
